--- a/index.html
+++ b/index.html
@@ -48,11 +48,53 @@
             constructor() {
                 super('homepage');
             }
+
+            preload(){
+                this.load.path = './assets/';
+                this.load.image('forest', 'forest.jpg');
+            }
+
             create() {
-                this.add.text(330, 420, "Dood", {fontFamily: 'Comforter', fontSize: '60px', color: '#00f'}).setOrigin(0.5);
                 this.graphics = this.add.graphics();
-                this.graphic.fillTriangle(250, 50, 200, 150, 300, 150);
-                //this.add.rectangle(320,210,180,0xff9116);
+                let blueCircle = this.add.circle(190,210,60,0x0000ff);
+                let text = this.add.text(-200, 210, "Play\nOptions\nCredits\nQuit", {fontFamily: 'Arial', fontSize: '40px', color: '#ffffff'}).setOrigin(0.5);
+
+                //attempt to scale and grown size of circle
+                this.tweens.add({
+                    targets: blueCircle,
+                    duration: 2000,
+                    scaleX: 3,
+                    scaleY: 3,
+                    //radius: 160,
+                    ease: 'Linear',
+                    onComplete: () => blueCircle.setFillStyle(0x0000ff)
+                });
+                
+                //attempt to move text onto circle
+                this.tweens.add({
+                    targets: text,
+                    duration: 1000,
+                    x: 200,
+                    ease: 'Linear',
+                    delay: 2000
+                });
+
+                //attempt to move image onto screen fromthe right
+                let forest =  this.add.image(800,240, 'forest').setScale(0.5);
+                this.tweens.add({
+                    targets: forest,
+                    duration: 2000,
+                    x: 520,
+                    ease: 'Linear',
+                    delay: 0
+                });
+                forest.depth = 1;
+
+                //this.add.text(210, 210, "Play\nOptions\nCredits\nQuit", {fontFamily: 'Arial', fontSize: '40px', color: '#ffffff'}).setOrigin(0.5);
+                
+                //let forest = this.add.image(520,240, 'forest').setScale(0.5);
+                //forest.depth = 1;
+
                 this.input.on('pointerdown', () => this.scene.start('Storyintro'));
             }
 
@@ -63,11 +105,17 @@
                 super('preload');
             }
             preload(){
-                this.load.image('forest 2', 'assets/forest 2.jpg');
+                this.load.image('background', 'background.jpg');
             }
             create(){
                 this.scene.start('Intro');
             }
+            //preload(){
+               // this.load.path = './assets/';
+               // this.load.image('ball', 'ball.png');
+                //this.load.path = './assets/';
+                //this.load.image('bird', 'bird.png');
+           // }
         }
 
         class Storyintro extends Phaser.Scene{
@@ -76,15 +124,23 @@
             }
             preload(){
                 this.load.path = './assets/';
-                this.load.image('forest 2', 'forest 2.png');
+                this.load.image('background', 'background.jpg');
+                this.load.image('ball', 'ball.png');
+                this.load.image('bird', 'bird.png');
             }
             create(){
-                //let forest2 = this.add.image(320,210, 'forest 2').setScale(5);
-                //forest2.depth = 1;
-                this.add.image(0, 0, 'forest 2').setOrigin(0, 0);
-                this.add.text(330, 120, "A world ruled by dogs. . .", {fontFamily: 'Arial', fontSize: '20px', color: '#ffffff'}).setOrigin(0.5);
-                this.add.text(330, 220, "Can you picture it?", {fontFamily: 'Arial', fontSize: '20px', color: '#ffffff'}).setOrigin(0.5);
-                this.add.text(330, 320, "No?! Well then come explore it for yourself.", {fontFamily: 'Arial', fontSize: '20px', color: '#ffffff'}).setOrigin(0.5);
+                //let background = this.add.image(320,210, 'background').setScale(5);
+                //background.depth = 1;
+                this.add.image(0, 0, 'background').setOrigin(0, 0);
+                this.add.text(330, 220, "A world ruled by dogs. . .", {fontFamily: 'Arial', fontSize: '20px', color: '#ffffff'}).setOrigin(0.5);
+                this.add.text(330, 320, "Can you picture it?", {fontFamily: 'Arial', fontSize: '20px', color: '#ffffff'}).setOrigin(0.5);
+                this.add.text(330, 420, "No?! Well then come explore it for yourself.", {fontFamily: 'Arial', fontSize: '20px', color: '#ffffff'}).setOrigin(0.5);
+                //figure out how to move ball and bird
+                let ball = this.add.image(420,210, 'ball').setScale(0.05);
+                logoImage.depth = 1;
+                //bird is not showing up
+                let bird = this.add.image(320,210, 'bird').setScale(0.1);
+                logoImage.depth = 1;
 
                 this.input.on('pointerdown', () => this.scene.start('Outro'));
 
@@ -102,7 +158,7 @@
         new Phaser.Game({
            width: 640,
            height: 480,
-           scene: [Storyintro, Intro, Logo, Homepage, Outro],
+           scene: [Homepage, Intro, Logo, Storyintro, Outro],
         });
 
     </script>
