--- a/index.html
+++ b/index.html
@@ -192,21 +192,122 @@
                 this.load.image('background', 'background.jpg');
                 this.load.image('ball', 'ball.png');
                 this.load.image('bird', 'bird.png');
+                this.load.audio('Berkeley',['Berkeley.wav']);
+                this.load.audio('Ball',['Ball.wav']);
+
             }
             create(){
                 //let background = this.add.image(320,210, 'background').setScale(5);
                 //background.depth = 1;
                 this.add.image(0, 0, 'background').setOrigin(0, 0);
-                this.add.text(330, 220, "A world ruled by dogs. . .", {fontFamily: 'Arial', fontSize: '20px', color: '#ffffff'}).setOrigin(0.5);
-                this.add.text(330, 320, "Can you picture it?", {fontFamily: 'Arial', fontSize: '20px', color: '#ffffff'}).setOrigin(0.5);
-                this.add.text(330, 420, "No?! Well then come explore it for yourself.", {fontFamily: 'Arial', fontSize: '20px', color: '#ffffff'}).setOrigin(0.5);
-                //figure out how to move ball and bird
-                let ball = this.add.image(420,210, 'ball').setScale(0.05);
-                logoImage.depth = 1;
-                //bird is not showing up
-                let bird = this.add.image(320,210, 'bird').setScale(0.1);
-                logoImage.depth = 1;
+                this.add.text(300,10,"Please press on volume button to hear audio",{fontFamily: 'Arial', fontSize: '20px', color: '#000000'}).setOrigin(0.5);
+                let texta = this.add.text(430, 220, "A world ruled by dogs. . .", {fontFamily: 'Arial', fontSize: '20px', color: '#000000'}).setOrigin(0.5);
+                let textb = this.add.text(430, 280, "Can you picture it?", {fontFamily: 'Arial', fontSize: '20px', color: '#000000'}).setOrigin(0.5);
+                let textc = this.add.text(420, 340, "No?! Well then come explore it for yourself.", {fontFamily: 'Arial', fontSize: '20px', color: '#000000'}).setOrigin(0.5);
 
+                texta.alpha = 0;
+                textb.alpha = 0;
+                textc.alpha = 0;
+
+                let ball = this.add.image(500,500, 'ball').setScale(0.02);
+                ball.depth = 1;
+                
+                let bird = this.add.image(-100,-100, 'bird').setScale(0.01);
+                bird.depth = 1;
+                
+                //fix code so that sound plays automatically
+                let Berkeley = this.sound.add('Berkeley', {loop: false, volume: 0.5});
+                let Ball = this.sound.add('Ball');
+                //play audio when bird moves onto screen
+                //this.tweens.add({
+                //    targets: Berkeley,
+                //    duration:2500,
+                //    x: 200,
+                //    y: 140,
+                //    ease: 'Power1',
+                //    delay: 1000,
+                //    onComplete: () => {Berkeley.setScale}
+                //})
+
+                this.tweens.add({
+                    targets: texta,
+                    duration: 1000,
+                    alpha: 1,
+                    ease: 'Linear',
+                    delay: 1000,
+                    onComplete: () => {
+                        Berkeley.play();
+                        Ball.play();
+                    }
+                });
+
+                this.tweens.add({
+                    targets: bird,
+                    duration: 2500,
+                    x:200,
+                    y: 140,
+                    ease: 'Power1',
+                    delay: 1200,
+                    OnComplete: () => {
+                        bird.setScale(0.2);
+                        Berkeley.play();
+                    }
+                });
+
+                this.tweens.add({
+                    targets: textb,
+                    duration: 1000,
+                    alpha: 1,
+                    ease: 'Linear',
+                    delay: 1200
+                });
+
+                this.tweens.add({
+                    targets: ball,
+                    duration: 2300,
+                    x:250,
+                    y: 220,
+                    ease: 'Power1',
+                    delay: 1400,
+                    Oncomplete: () => {
+                        ball.setScale(0.03);
+                    }
+                });
+
+                this.tweens.add({
+                    targets: textc,
+                    duration: 1000,
+                    alpha: 1,
+                    ease: 'Linear',
+                    delay: 4000
+                });
+
+                this.tweens.add({
+                    targets: ball,
+                    duration: 4000,
+                    x:-100,
+                    y: -100,
+                    ease: 'Power1',
+                    delay: 4000,
+                    Oncomplete: () => {
+                        ball.setScale(0.01);
+                    }
+                });
+
+                this.tweens.add({
+                    targets: bird,
+                    duration: 4000,
+                    x:-100,
+                    y: -100,
+                    ease: 'Power1',
+                    delay: 4200,
+                    Oncomplete: () => {
+                        bird.setScale(0.03);
+                    }
+                });
+
+                bird.depth = 1;
+                ball.depth = 2;
                 this.input.on('pointerdown', () => this.scene.start('Outro'));
 
             }
@@ -223,7 +324,7 @@
         new Phaser.Game({
            width: 640,
            height: 480,
-           scene: [Logo, Intro, Homepage, Storyintro, Outro],
+           scene: [Storyintro, Intro, Logo, Homepage, Outro],
         });
 
     </script>
