--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 this.load.image('logoImage', 'logoImage.png');
             }
             create(){
-                let instruction = this.add.text(300,10,"Click on screen to play to continue.",{fontFamily: 'Arial', fontSize: '20px', color: '#ffffff'}).setOrigin(0.5);
+                let instruction = this.add.text(320,15,"Click to Continue.",{fontFamily: 'Arial', fontSize: '20px', color: '#ffffff'}).setOrigin(0.5);
                 let orangeCircle = this.add.circle(320,210,100,0xff9116);
                 let logoImage = this.add.image(320,210, 'logoImage').setScale(0.50);
                 let text = this.add.text(330, 420, "Dood", {fontFamily: 'Comforter', fontSize: '60px', color: '#00f'}).setOrigin(0.5);
@@ -118,7 +118,7 @@
             }
 
             create() {
-                this.add.text(30,10,"Click on screen to continue.",{fontFamily: 'Arial', fontSize: '20px', color: '#ffffff'}).setOrigin(0.5);
+                this.add.text(110,5, "Click to Continue.", {fontFamily: 'Arial', fontSize: '20px', color: '#ffffff'});//.setOrigin(0.5);
                 this.graphics = this.add.graphics();
                 let blueCircle = this.add.circle(190,210,60,0x0000ff);
                 let text = this.add.text(-200, 210, "Play\nOptions\nCredits\nQuit", {fontFamily: 'Arial', fontSize: '40px', color: '#ffffff'}).setOrigin(0.5);
@@ -204,7 +204,7 @@
                 //let background = this.add.image(320,210, 'background').setScale(5);
                 //background.depth = 1;
                 this.add.image(0, 0, 'background').setOrigin(0, 0);
-                this.add.text(300,10,"Click on screen to play to continue.",{fontFamily: 'Arial', fontSize: '20px', color: '#000000'}).setOrigin(0.5);
+                this.add.text(300,10,"Click to Continue.",{fontFamily: 'Arial', fontSize: '20px', color: '#000000'}).setOrigin(0.5);
                 let texta = this.add.text(430, 220, "A world ruled by dogs. . .", {fontFamily: 'Arial', fontSize: '20px', color: '#000000'}).setOrigin(0.5);
                 let textb = this.add.text(430, 280, "Can you picture it?", {fontFamily: 'Arial', fontSize: '20px', color: '#000000'}).setOrigin(0.5);
                 let textc = this.add.text(420, 340, "No?! Well then come explore it for yourself.", {fontFamily: 'Arial', fontSize: '20px', color: '#000000'}).setOrigin(0.5);
