--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 this.load.image('logoImage', 'logoImage.png');
             }
             create(){
-                let instruction = this.add.text(320,15,"Click to Continue.",{fontFamily: 'Arial', fontSize: '20px', color: '#ffffff'}).setOrigin(0.5);
+                //let instruction = this.add.text(320,15,"Click to Continue.",{fontFamily: 'Arial', fontSize: '20px', color: '#ffffff'}).setOrigin(0.5);
                 let orangeCircle = this.add.circle(320,210,100,0xff9116);
                 let logoImage = this.add.image(320,210, 'logoImage').setScale(0.50);
                 let text = this.add.text(330, 420, "Dood", {fontFamily: 'Comforter', fontSize: '60px', color: '#00f'}).setOrigin(0.5);
@@ -88,12 +88,18 @@
                         duration: 1300,
                         scale: 0.5,
                         ease: 'Linear',
-                        delay: 2700
+                        delay: 2700,
+                        Oncomplete: () => {
+                        this.time.delayedCall(2495,()=> {
+                            this.scene.start("homepage");
+                        });
+
+                        }
                     });
 
                 orangeCircle.depth = 1;
                 logoImage.depth = 1;
-                instruction.depth = 2;
+                //instruction.depth = 2;
                 text.depth = 2;
                 text2.depth = 2;
                 text3.depth = 2;
@@ -190,7 +196,7 @@
             }
             create(){
                 this.add.image(0, 0, 'background').setOrigin(0, 0);
-                this.add.text(300,10,"Click to Continue.",{fontFamily: 'Arial', fontSize: '20px', color: '#000000'}).setOrigin(0.5);
+                //this.add.text(300,10,"Click to Continue.",{fontFamily: 'Arial', fontSize: '20px', color: '#000000'}).setOrigin(0.5);
                 let texta = this.add.text(430, 220, "A world ruled by dogs. . .", {fontFamily: 'Arial', fontSize: '20px', color: '#000000'}).setOrigin(0.5);
                 let textb = this.add.text(430, 280, "Can you picture it?", {fontFamily: 'Arial', fontSize: '20px', color: '#000000'}).setOrigin(0.5);
                 let textc = this.add.text(420, 340, "No?! Well then come explore it for yourself.", {fontFamily: 'Arial', fontSize: '20px', color: '#000000'}).setOrigin(0.5);
@@ -283,11 +289,19 @@
                     delay: 4200,
                     Oncomplete: () => {
                         bird.setScale(0.03);
+                        this.time.delayedCall(5695,()=> {
+                            this.scene.start("intro");
+                        });
                     }
                 });
 
                 bird.depth = 1;
                 ball.depth = 2;
+
+                //fade out screen
+                this.time.delayedCall (5700, () => {
+                    this.cameras.main.fadeOut(2000, 0, 0, 0);
+                });
                 this.input.on('pointerdown', () => this.scene.start('intro'));
 
             }
